<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_Apple"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_Apple" />

        <EditText
            android:id="@+id/editText_AppleAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/amountHints"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_ApplePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ems="10"
            android:hint="@string/priceHints"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_Strawberry"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_Strawberry" />

        <EditText
            android:id="@+id/editText_StrawberryAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/amountHints"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_StrawberryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ems="10"
            android:hint="@string/priceHints"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_Blueberry"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_Blueberry" />

        <EditText
            android:id="@+id/editText_BlueberryAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/amountHints"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_BlueberryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ems="10"
            android:hint="@string/priceHints"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_Potatoes"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox_Potatoes" />

        <EditText
            android:id="@+id/editText_PotatoesAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/amountHints"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_PotatoesPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ems="10"
            android:hint="@string/priceHints"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_ToastOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radioButton_ToastOutput" />

            <RadioButton
                android:id="@+id/radioButton_DialogOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_DialogOutput" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="button_Calculate_OnClick"
            android:text="@string/button_Calculate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/myNameAndGroup"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>